--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Shiva Cabs - Bengaluru</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
 <style>
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     background: #f5f5f5;
 }
+
 header {
     background: #000;
     color: #fff;
     padding: 15px 30px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
+
 header h1 { color: #ffc107; }
+
 .hero {
     background: url('https://images.unsplash.com/photo-1502877338535-766e1452684a') center/cover;
     height: 90vh;
@@ -28,42 +33,59 @@ header h1 { color: #ffc107; }
     color: #fff;
     text-align: center;
 }
+
 .hero h2 {
     background: rgba(0,0,0,0.7);
     padding: 20px;
     font-size: 40px;
 }
+
 .section {
     padding: 50px 20px;
     text-align: center;
 }
+
 .pricing, .services {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
+
 .card {
     background: #fff;
     padding: 20px;
-    width: 250px;
+    width: 260px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
 }
+
+.card:hover {
+    transform: scale(1.05);
+}
+
 form input, form textarea {
     width: 90%;
     padding: 10px;
     margin: 10px 0;
 }
+
 button {
     background: #ffc107;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
 }
+
+button:hover {
+    background: #e0a800;
+}
+
 .contact-buttons {
     margin-top: 20px;
 }
+
 .contact-buttons a {
     display: inline-block;
     margin: 10px;
@@ -73,9 +95,11 @@ button {
     text-decoration: none;
     border-radius: 5px;
 }
+
 .call-btn {
     background: #007bff !important;
 }
+
 footer {
     background: #000;
     color: #fff;
@@ -88,7 +112,11 @@ footer {
 
 <header>
 <h1>Shiva Cabs</h1>
-<div>📍 Bengaluru | 📞 8618182400</div>
+<div>
+📍 Bengaluru <br>
+📞 8618182400 / 9880494036 <br>
+✉️ Skshivakumar37@gmail.com
+</div>
 </header>
 
 <section class="hero">
@@ -99,7 +127,7 @@ footer {
 <h2>Our Services</h2>
 <div class="services">
 <div class="card">🚕 Local Trips</div>
-<div class="card">✈️ Airport Pickup</div>
+<div class="card">✈️ Airport Pickup & Drop</div>
 <div class="card">🛣️ Outstation Trips</div>
 <div class="card">🕒 24/7 Service</div>
 </div>
@@ -108,21 +136,64 @@ footer {
 <section class="section">
 <h2>Price List</h2>
 <div class="pricing">
-<div class="card">Local: ₹13/km</div>
-<div class="card">Airport: ₹799 onwards</div>
-<div class="card">Outstation: ₹14/km</div>
-<div class="card">Driver Allowance: ₹300/day</div>
+
+<div class="card">
+<h3>🚕 Local - Sedan</h3>
+4hrs - 40km : ₹1000<br>
+8hrs - 80km : ₹2000<br>
+Extra Hour : ₹150<br>
+Extra KM : ₹15/km
+</div>
+
+<div class="card">
+<h3>🚐 Local - Innova</h3>
+8hrs : ₹3000<br>
+Extra KM : ₹20/km<br>
+Extra Hour : ₹250
+</div>
+
+<div class="card">
+<h3>🛣️ Outstation - Sedan</h3>
+₹12/km + ₹400 Driver Bata<br>
+7AM - 9PM<br>
+Toll & Parking Extra
+</div>
+
+<div class="card">
+<h3>🚘 Innova / Crysta</h3>
+₹19/km + ₹400 Driver Bata
+</div>
+
+<div class="card">
+<h3>🚗 Hycross</h3>
+₹20/km + ₹400 Driver Bata
+</div>
+
+<div class="card">
+<h3>🚌 Tempo Traveller</h3>
+8hrs - 80km : ₹4500<br>
+Extra KM : ₹22/km<br>
+Extra Hour : ₹300
+</div>
+
+<div class="card">
+<h3>✈️ Airport</h3>
+Pickup & Drop Available<br>
+Contact for Booking
+</div>
+
 </div>
 </section>
 
 <section class="section">
 <h2>Book Your Ride</h2>
-<form>
-<input type="text" placeholder="Your Name" required><br>
-<input type="tel" placeholder="Phone Number" required><br>
-<input type="text" placeholder="Pickup Location" required><br>
-<input type="text" placeholder="Drop Location" required><br>
-<textarea placeholder="Travel Date & Time"></textarea><br>
+
+<form id="bookingForm">
+<input type="text" id="name" placeholder="Your Name" required><br>
+<input type="tel" id="phone" placeholder="Phone Number" required><br>
+<input type="text" id="pickup" placeholder="Pickup Location" required><br>
+<input type="text" id="drop" placeholder="Drop Location" required><br>
+<textarea id="dateTime" placeholder="Travel Date & Time"></textarea><br>
 <button type="submit">Submit Booking</button>
 </form>
 
@@ -130,11 +201,49 @@ footer {
 <a href="https://wa.me/918618182400">Book on WhatsApp</a>
 <a href="tel:8618182400" class="call-btn">Call Now</a>
 </div>
+
 </section>
 
 <footer>
 © 2026 Shiva Cabs Bengaluru. All Rights Reserved.
 </footer>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAk2-r_Ph7md6UnlF9eQ_FQJ56m06HeH9Q",
+  authDomain: "shiva-cabs-67495.firebaseapp.com",
+  projectId: "shiva-cabs-67495",
+  storageBucket: "shiva-cabs-67495.firebasestorage.app",
+  messagingSenderId: "575273167097",
+  appId: "1:575273167097:web:c2f53d5822598a4a535a28"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+document.getElementById("bookingForm").addEventListener("submit", async function(e) {
+    e.preventDefault();
+
+    const name = document.getElementById("name").value;
+    const phone = document.getElementById("phone").value;
+    const pickup = document.getElementById("pickup").value;
+    const drop = document.getElementById("drop").value;
+    const dateTime = document.getElementById("dateTime").value;
+
+    await addDoc(collection(db, "bookings"), {
+        name, phone, pickup, drop, dateTime,
+        created: new Date()
+    });
+
+    const message = `New Booking:%0AName: ${name}%0APhone: ${phone}%0APickup: ${pickup}%0ADrop: ${drop}%0ADate & Time: ${dateTime}`;
+    window.open(`https://wa.me/918618182400?text=${message}`, "_blank");
+
+    alert("Booking Submitted Successfully!");
+});
+</script>
 
 </body>
 </html>
